2018-12-28-21:33 Refactoring code of loading more content on Scrolling status

--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -9,17 +9,10 @@
     android:padding="10dp"
     tools:context=".activity.ReadActivity">
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="第一章 哈哈哈" />
-
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottomBar"
-        android:layout_below="@+id/tv_title">
+        android:layout_above="@+id/bottomBar">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
@@ -45,13 +38,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/battery"
-            android:text="下午 11:11" />
+            tools:text="下午 11:11" />
 
         <TextView
             android:id="@+id/tv_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="1/7" />
+            android:layout_alignParentEnd="true"
+            tools:text="1/7" />
     </RelativeLayout>
 </RelativeLayout>
