--- a/app/src/main/res/layout/item_book_list.xml
+++ b/app/src/main/res/layout/item_book_list.xml
@@ -5,22 +5,31 @@
     android:layout_height="wrap_content"
     android:padding="10dp">
 
+
     <ImageView
         android:id="@+id/iv_cover"
         android:layout_width="80dp"
         android:layout_height="100dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:contentDescription="@string/TODO"
         android:scaleType="fitXY"
         android:src="@drawable/jianlai" />
+
+    <com.example.mycrawler.util.FirstToThree
+        android:id="@+id/iv_firstToThree"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignStart="@+id/iv_cover"
+        android:layout_alignTop="@+id/iv_cover"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/iv_cover"
         android:layout_alignBottom="@+id/iv_cover"
-        android:layout_marginLeft="10dp"
-        android:layout_toLeftOf="@+id/tv_ranking"
-        android:layout_toRightOf="@+id/iv_cover"
+        android:layout_marginStart="10dp"
+        android:layout_toStartOf="@+id/tv_ranking"
+        android:layout_toEndOf="@+id/iv_cover"
         android:orientation="vertical">
 
         <TextView
@@ -52,8 +61,9 @@
         android:id="@+id/tv_ranking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp"
+        android:textColor="#f6b429"
         android:textSize="15sp"
         tools:text="7.5" />
 </RelativeLayout>
